--- a/windows/tests/9.2.x/docker-compose.xp.yml
+++ b/windows/tests/9.2.x/docker-compose.xp.yml
@@ -1,6 +1,13 @@
 version: "2.4"
 
 services:
+  monitor:
+    image: ${REGISTRY}windows-hosts-writer:kumar-${NANOSERVER_VERSION}
+    volumes:
+      - C:\windows\system32\drivers\etc:C:\driversetc
+      - source: '\\.\pipe\docker_engine'
+        target: '\\.\pipe\docker_engine'
+        type: npipe
 
   sql:
     image: ${REGISTRY}sitecore-xp-sqldev:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
@@ -32,6 +39,10 @@ services:
     links:
       - sql
       - solr
+    networks:
+      default:
+        aliases:
+          - xconnect.dev.local
 
   xconnect-automationengine:
     image: ${REGISTRY}sitecore-xp-xconnect-automationengine:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
@@ -81,19 +92,42 @@ services:
     volumes:
       - ${LICENSE_PATH}:C:\license
       - .\data\cm:C:\inetpub\wwwroot\App_Data\logs
+      - .\src\cm:C:\src
+      - .\startup\cm:C:\startup
+    entrypoint: powershell.exe -NoLogo -NoProfile -File C:\\startup\\entrypoint.ps1
+    environment:
+      HOST_HEADER: cm.dev.local
     ports:
       - "44001:80"
     links:
       - sql
       - solr
       - xconnect
+    networks:
+      default:
+        aliases:
+          - cm.dev.local
 
   identity:
     image: ${REGISTRY}sitecore-xp-identity:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
     volumes:
       - ${LICENSE_PATH}:C:\license
       - .\data\identity:C:\inetpub\wwwroot\wwwroot\logs
+      - .\src\identity:C:\src
+      - .\startup\identity:C:\startup
+    # entrypoint: powershell.exe -NoLogo -NoProfile -File C:\\startup\\entrypoint.ps1
+    environment:
+      HOST_HEADER: identity
     ports:
       - "44005:80"
     links:
       - sql
+    networks:
+      default:
+        aliases:
+          - identity.dev.local
+
+networks:
+  default:
+    external:
+      name: nat
