--- a/windows/9.2.x/sitecore-xp/config/IdentityServer.config
+++ b/windows/9.2.x/sitecore-xp/config/IdentityServer.config
@@ -2,12 +2,7 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
     <sitecore>
         <sc.variable name="identityServerAuthority">
-            <patch:attribute name="value">http://id</patch:attribute>
+            <patch:attribute name="value">https://identity</patch:attribute>
         </sc.variable>
-        <settings>
-            <setting name="FederatedAuthentication.IdentityServer.RequireHttpsMetadata">
-                <patch:attribute name="value">false</patch:attribute>
-            </setting>
-        </settings>
     </sitecore>
 </configuration>
