--- a/windows/tests/9.3.x/.env
+++ b/windows/tests/9.3.x/.env
@@ -1,8 +1,8 @@
 # To ensure the image convention [REGISTRY/]sitecore-<TOPOLOGY>[-VARIANT]-<ROLE>:<SITECORE_VERSION>-<OS_VERSION> is adhered to,
 # the REGISTRY environment variable must end with a trailing slash "/"
-REGISTRY=
-WINDOWSSERVERCORE_VERSION=ltsc2019
-NANOSERVER_VERSION=1809
+REGISTRY=d2kir.azurecr.io/
+WINDOWSSERVERCORE_VERSION=1903
+NANOSERVER_VERSION=1903
 SITECORE_VERSION=9.3.0
 SITECORE_LICENSE=
 SQL_SA_PASSWORD=8Tombs-Given-Clock#-arming-Alva-debut-Spine-monica-Normal-Ted-About1-chard-Easily-granddad-5Context!
