--- a/windows/tests/9.2.x/docker-compose.xp.sxa.yml
+++ b/windows/tests/9.2.x/docker-compose.xp.sxa.yml
@@ -59,17 +59,17 @@ services:
       - sql
       - xconnect
 
-  cd:
-    image: ${REGISTRY}sitecore-xp-sxa-cd:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
-    volumes:
-      - ${LICENSE_PATH}:C:\license
-      - .\data\cd:C:\inetpub\wwwroot\App_Data\logs
-    ports:
-      - "44002:80"
-    links:
-      - sql
-      - solr
-      - xconnect
+  # cd:
+  #   image: ${REGISTRY}sitecore-xp-sxa-cd:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
+  #   volumes:
+  #     - ${LICENSE_PATH}:C:\license
+  #     - .\data\cd:C:\inetpub\wwwroot\App_Data\logs
+  #   ports:
+  #     - "44002:80"
+  #   links:
+  #     - sql
+  #     - solr
+  #     - xconnect
 
   cm:
     image: ${REGISTRY}sitecore-xp-sxa-standalone:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
@@ -88,6 +88,10 @@ services:
       - sql
       - solr
       - xconnect
+    networks:
+      default:
+        aliases:
+          - sc92.dev.local
 
   identity:
     image: ${REGISTRY}sitecore-xp-identity:${SITECORE_VERSION}-windowsservercore-${WINDOWSSERVERCORE_VERSION}
@@ -98,3 +102,11 @@ services:
       - "44005:80"
     links:
       - sql
+
+  monitor:
+    image: versusmind.azurecr.io/windows-hosts-writer:1.2.0-1903
+    volumes:
+      - C:\windows\system32\drivers\etc:C:\driversetc
+      - source: '\\.\pipe\docker_engine'
+        target: '\\.\pipe\docker_engine'
+        type: npipe
